--- a/src/layout/components/header/header.module.less
+++ b/src/layout/components/header/header.module.less
@@ -16,6 +16,9 @@
         box-shadow: none;
         background-color: transparent;
     }
+    &.phone {
+        max-width: 82vw;
+    }
     &.dark {
         background: @darkBg;
     }
