--- a/src/layout/components/menu/menu.module.less
+++ b/src/layout/components/menu/menu.module.less
@@ -9,6 +9,8 @@
 
 .autoWidthMenu {
     width: 58vw;
+    display: flex;
+    align-items: center;
 }
 
 .logoContainer {
@@ -25,4 +27,10 @@
 
 .header {
     justify-content: flex-start;
+}
+.phone {
+    width: auto;
+    flex: 1;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
