--- a/src/layout/layout.module.less
+++ b/src/layout/layout.module.less
@@ -34,9 +34,8 @@
     }
 
     .mainContent {
-        background: @darkBg;
-        margin: 0 16px 16px;
-        padding: 16px;
+        margin: 15px;
+        padding: 15px;
         overflow: auto;
         transition: all .5s;
     }
