--- a/src/layout/layout.module.less
+++ b/src/layout/layout.module.less
@@ -34,7 +34,7 @@
     }
 
     .mainContent {
-        margin: 15px;
+        margin: 0 15px 15px;
         padding: 15px;
         overflow: auto;
         transition: all .5s;
